<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityUserLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserActivity" >

    <LinearLayout
        android:id="@+id/messageContainer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voornaam"
            android:textSize="20sp" 
            android:layout_margin="5dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="OK"
            android:onClick="removeMessage"
             >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
         >

        <TextView
            android:id="@+id/voornaam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voornaam"
            android:textSize="35sp" 
             android:background="@drawable/button"
             android:padding="15dp"/>

        <TextView
            android:id="@+id/naam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naam"
            android:textSize="30sp"
             android:background="@drawable/button"
             android:padding="15dp"
             android:layout_margin="10dp" />

        <Button
            android:id="@+id/checkInButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:onClick="checkIn"
            android:text="@string/checkInButton" 
             android:background="@drawable/button"/>

        <Button
            android:id="@+id/checkOutButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:onClick="checkOut"
            android:text="@string/checkOutButton"
             android:background="@drawable/button"
             android:layout_margin="10dp"  />

        <Button
            android:id="@+id/overzichtButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:onClick="toOverview"
            android:text="@string/overzichtButton" 
             android:background="@drawable/button"/>
    </LinearLayout>

</RelativeLayout>